--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
-<div class="footer">
-	<small>
-		By <%= link_to "Joaquin Roca", "http://JoaquinRoca.com" %>
-	</small>
+<div class="container">
+	<div class="footer">
+		<small>
+			By <%= link_to "Joaquin Roca", "http://JoaquinRoca.com" %>
+		</small>
+	</div>
 </div>
